HomeScreen.AppHost/aspirate-output/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspire-dashboard
  labels:
    app: aspire-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspire-dashboard
  template:
    metadata:
      labels:
        app: aspire-dashboard
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: aspire-dashboard
          image: mcr.microsoft.com/dotnet/aspire-dashboard:8.0
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              memory: "512Mi"
          ports:
            - name: dashboard-ui
              containerPort: 18888
            - name: otlp
              containerPort: 18889
---
apiVersion: v1
kind: Service
metadata:
  name: aspire-dashboard
spec:
  selector:
    app: aspire-dashboard
  ports:
    - name: dashboard-ui
      protocol: TCP
      port: 18888
      targetPort: 18888
    - name: otlp
      protocol: TCP
      port: 18889
      targetPort: 18889
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspire-dashboard-ingress
spec:
  rules:
  - host: "aspire.home-automation.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspire-dashboard
            port:
              name: dashboard-ui
  - host: "otlp.home-automation.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspire-dashboard
            port:
              name: otlp
