HomeScreen.AppHost/aspirate-output/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-screen
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  ports:
    - name: traefik
      port: 9000
      targetPort: traefik
      protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "traefik-dashboard"
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: traefik-staging.home-automation.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-headers
  namespace: home-screen
spec:
  headers:
  accessControlAllowMethods:
    - "GET"
    - "OPTIONS"
    - "PUT"
  accessControlAllowHeaders:
    - "*"
  accessControlAllowOriginList:
    - "https://foo.bar.org"
    - "https://example.org"
  accessControlMaxAge: 100
  addVaryHeader: true
